plugins {
    id 'java-library'
}

java {
    sourceCompatibility = JavaVersion.VERSION_16
    targetCompatibility = JavaVersion.VERSION_16
}

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

repositories {
    mavenCentral()
}

ext {
	junitVersion = '5.7.0'
	jerseyVersion = '2.27'
	jsonVersion = '1.1.4'	
	assertjVersion = '3.12.2'
}

dependencies {

	testImplementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'


	// JUnit5-Testing
	testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
	// Erweiterung: siehe http://joel-costigliola.github.io/assertj/assertj-core-quick-start.html
	testImplementation group: 'org.assertj', name: 'assertj-core', version: "${assertjVersion}"
	
	// REST Client Jersey
	// ohne Activation: Warnungen!!
	implementation group: 'javax.activation', name: 'activation', version: '1.1.1'
	implementation group: 'org.glassfish.jersey.core', name: 'jersey-client', version: "${jerseyVersion}"
	implementation group: 'org.glassfish', name: 'javax.json', version: "${jsonVersion}"
	// ohne Injection: Fehler zur Laufzeit!
	implementation group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: "${jerseyVersion}"
	
	implementation group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.1'
	implementation group: 'javax.json', name: 'javax.json-api', version: '1.1'
}

test {
    useJUnitPlatform()
}
